// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with 1 expense 1`] = `
<div>
  <h3>
    You have 
    1
     
    expense
     with a total of 
    $0.14
  </h3>
</div>
`;

exports[`should render correctly with multiple expenses 1`] = `
<div>
  <h3>
    You have 
    3
     
    expenses
     with a total of 
    $0.41
  </h3>
</div>
`;
